--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ pdf2image==1.17.0
 poppler==22.12.0
 pandas==2.1.4
 matplotlib==3.8.0
+pincecone-client==3.2.1
+transformers==4.39.2
+sentence-transformers==2.6.1
+nltk==3.8.1
